# SAGER

./: .gitignore  README.md  invention_disclosure.md  live.main.tex  patent_package.md  patent_plan.md  prototype_roadmap.md  pyproject.toml
docflow/: README.md
docflow/examples/: document_preprocess.flow.dag.yaml  document_standard.flow.flex.yaml
docflow/templates/: conversion.flow.dag.yaml  evaluation.flow.dag.yaml  extraction.flow.dag.yaml  indexing.flow.dag.yaml
docs/: docflow_flow_types.md  method_explainer.html  method_explainer.md  preprocessing_only.md  research_paper.md  research_paper_ieee.md  sdf_format.md  sdf_python_example.md  sdf_python_library.md  sdf_vscode_extension.md  sdf_vscode_troubleshooting.md
docs/diagrams/: architecture.mmd  data_model.mmd  process_flow.mmd
docs/ieee/: SUBMISSION_NOTES.md  paper.tex
overleaf_bundle/: README.md  paper.tex  references.bib
scripts/: build_corpus_index.py  create_sdf.py  export_sdf_logo_png.py  generate_diagram_pngs.py  generate_paper_figures.py  process_pdfs.py  query_corpus.py  query_sdf.py  run_docflow.py  run_sager_preprocessing.py  visualize_docflow.py
templates/: search.html
tests/: conftest.py  test_corpus_api.py  test_corpus_query.py  test_docflow.py  test_docflow_adapters.py  test_docflow_visualizer.py  test_pdf_batch.py  test_pipeline.py  test_preprocess_pipeline.py  test_sdf_service.py  test_sdfkit.py  test_structure_labels.py
vscode-docflow/: README.md  extension.js  package.json
vscode-sdf-explorer/: README.md  extension.js  package.json  sdf-explorer-0.0.1.vsix
(+26 files in other folders)
