[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docintelligence"
version = "0.1.0"
description = "Prototype scaffold for evidence-graph document intelligence."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.7,<3",
  "uvicorn>=0.30,<1",
  "networkx>=3.3,<4",
  "numpy>=1.26,<3",
  "scikit-learn>=1.5,<2",
  "jinja2>=3.1,<4",
  "pypdf>=5,<6",
  "PyYAML>=6,<7",
  "openpyxl>=3.1,<4",
  "xlrd>=2,<3",
  "olefile>=0.47,<1",
  "extract-msg>=0.41,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
